fix: truncate 1023 and less pixel screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,12 +31,14 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .trunc-smaller {
         overflow: hidden;
         white-space: nowrap;
     }
+}
 
+@media screen and (max-width: 768px) {
     .post {
         margin: 0 2rem;
     }
